--- a/app.json
+++ b/app.json
@@ -32,6 +32,13 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "config": {
+        "cleartext": {
+          "config": {
+            "cleartextTrafficPermitted": true
+          }
+        }
       }
     },
     "web": {
